# KM-AVSR

./: .gitignore  LICENSE  eval.py  eval.sh  lighting_singlemodal.py  lightning_multimodal.py  main.py  pyproject.toml  train.py  train.sh
datamodule/: av_dataset.py  data_module.py  samplers.py  transforms.py
espnet/nets/pytorch_backend/: ctc.py  e2e_asr_conformer_av.py
espnet/nets/pytorch_backend/transformer/: mask.py
nlp/: README.md  morpheme_process.py  train_spm.py
utils/: avg_ckpts.py  cosine.py
