[project]
name = "km-avsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.0.0",
    "konlpy>=0.6.0",
    "pytorch-lightning>=2.5.2",
    "sentencepiece>=0.2.0",
    "six>=1.17.0",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
